bug fixing: sfixed bg bug & scrollbar bug 💀

--- a/client/client_pages/profile/profile.css
+++ b/client/client_pages/profile/profile.css
@@ -47,6 +47,7 @@ main {
 .element-inner-container {
     position: relative;
     overflow-x: auto;
+    overflow-y: hidden;
     width: 100%;
     height: 43px;
     white-space: nowrap;
@@ -74,6 +75,14 @@ main {
     color: black;
     text-shadow: none;
     background-color: white;
+}
+.element-inner-container::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+.element-inner-container::-webkit-scrollbar-track,
+.element-inner-container::-webkit-scrollbar-thumb {
+    background: transparent;
 }
 
 #profile-border {
